demo-tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-tomcat
  name: demo-tomcat
  namespace: demo-tomcat
spec:
  replicas: 6
  selector:
    matchLabels:
      app: demo-tomcat
  template:
    metadata:
      labels:
        app: demo-tomcat
    spec:
      containers:
      - image: tomcat:8.0
        imagePullPolicy: IfNotPresent
        name: tomcat
        ports:
        - containerPort: 8080
          protocol: TCP
