demo-tomcat-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-tomcat
  name: demo-tomcat-svc-np
  namespace: demo-tomcat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-tomcat
  type: NodePort
