demo-tomcat-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: ingress-tomcat-lab
  namespace: demo-tomcat
spec:
  rules:
  - host: tomcat-lab.isotrol.net
    http:
      paths:
      - backend:
          service:
            name: demo-tomcat-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tomcat-lab.isotrol.net
